# codegraph

./: .dockerignore  CHANGELOG.md  CLAUDE.md  README.md  package.json
.claude/skills/agent-eval/: corpus.json
__tests__/: batch.test.ts  c-fnptr-kernel-sweep.test.ts  cli-locate-batch.test.ts  extraction.test.ts  frameworks.test.ts  grammar-wasm-bytes.test.ts  kernel-grammar-parity.test.ts  kernel-rustlang-parity.test.ts  locate.test.ts  mcp-startup-orphan.test.ts  npm-shim.test.ts  parse-pool.test.ts  startup-handshake.test.ts  strip-cstyle-differential.test.ts  sync-fk-regression.test.ts  wal-deferral.test.ts
__tests__/fixtures/kernel-parity/: torture.rs
codegraph-kernel/: Cargo.toml
codegraph-kernel/src/: cfnptr.rs  langs.rs  lib.rs  rustlang.rs
docs/design/: ccpp-kernel-port-checklist.md  rust-kernel-migration-plan.md  rust-lang-kernel-port-checklist.md  value-reference-edges-playbook.md  value-reference-edges.md
scripts/: build-bundle.sh  kernel-parity.mjs  npm-shim.js
src/: batch.ts  index.ts  locate.ts  symbol-resolution.ts
src/db/: index.ts  queries.ts  sqlite-adapter.ts  wal-valve.ts
src/extraction/: grammars.ts  index.ts  parse-pool.ts  parse-worker.ts  store-worker.ts  store-writer.ts  tree-sitter.ts
src/extraction/kernel/: index.ts  loader.ts
src/extraction/languages/: c-cpp.ts
src/extraction/wasm/: tree-sitter-rust.wasm
src/mcp/: early-ppid.ts  index.ts  proxy.ts  startup-handshake.ts
src/resolution/: c-fnptr-synthesizer.ts  callback-synthesizer.ts  cooperative-yield.ts  import-resolver.ts  index.ts
(+1 files in other folders)
